# MyLib

./: LICENSE  pyproject.toml  requirements.txt
src/v2enlib/: __init__.py  config.py  gSQL.py  language.py  utils.py
