[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "v2enlib"
version = "0.0.1"
authors = [
  { name="Takahashi Nguyen", email="vietuk.nguyen.git@icloud.com" },
]
description = "A library for v2en"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-only",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TakahashiNguyen/v2en"
"Bug Tracker" = "https://github.com/TakahashiNguyen/v2en/issues"